# pylinx

./: .gitignore  .travis.yml  README.md  appveyor.yml  setup.cfg  setup.py  tox.ini
examples/: vivado_dummy_interact.py  vivado_hw_server_interact.py  vivado_interact.py
pylinx/: __init__.py  cleye.py  core.py  gt_util.py  hw_server.tcl  util.py
tests/: dummy_vivado.tcl  dummy_xsct.tcl  test_dummy_vivado.py  test_dummy_xsct.py  test_hw_server.py  test_util.py  test_vivado.py
tests/resources/: RX_DFE_RUNS2.xlsx  wtf_eye_sweep_03.csv
