[metadata]
name            = pylinx
author          = Benedek Racz
author-email    = betontalpfa@gmail.com
summary         = Python utils for Xilinx's tools
description-file = README.md
long-description-content-type = text/markdown
requires-python = >=3.4
project_urls =
    Source Code = https://github.com/raczben/pylinx
license = Apache License, Version 2.0
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    FPGA, Xilinx, Vivado, SDK, XSDK, scripting, automation, expect, pexpect, wexpect
    

[files]
; Add dummy TCL emulators for XSCT.
; data-files = pylinx/ = pylinx/*tcl
extra-files = pylinx/dummy_xsct.tcl

[options]
install_requires =
    psutil
    pexpect >= 4.0;platform_system!="Windows"
    wexpect >= 2.3;platform_system=="Windows"
    
[options.extras_require]
test =
    pytest
    pytest-cov
    coverage
    setuptools>=38.0
    twine
    tox
    codecov
